refactor: restructure backend into feature folders and convert DTOs to Java Records
- Restructured layer-based packages into feature-based folders (user, codeforces, common)
- Converted all DTO and response classes into Java Records
- Updated all test suites to use Record accessors
- Implemented instantaneous Codeforces rating synchronization on handle updates